src/objects/CQ_Wkl_Pipeline_Snapshot_by_Type__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Execution_Time__c</fullName>
        <label>Execution Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Forecasted_Bookings__c</fullName>
        <label>Forecasted Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Group_Owner_Team__c</fullName>
        <label>Group^Owner Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Team_Group_Buckets__c</fullName>
        <formula>LEFT(Group_Owner_Team__c, FIND( &quot;^&quot;,Group_Owner_Team__c )-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Team (Group Buckets)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Team__c</fullName>
        <formula>RIGHT(Group_Owner_Team__c, LEN(Group_Owner_Team__c)- FIND( &quot;^&quot;,Group_Owner_Team__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CQ Wkl Pipeline Snapshot by Type</label>
    <nameField>
        <label>CQ Wkl Pipeline Snapshot by Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CQ Wkl Pipeline Snapshots by Type</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>